# EDATRMS

./: .gitignore  README.md  docker-compose.yml  requirements.txt
api/: .dockerignore  Dockerfile  app.py  manage.py  pyproject.toml  requirements.txt
api/api_doc/: dev.md  use.md
api/blueprints/: __init__.py  account.py  animation.py  caption.py  common.py  ip.py  novel.py  storage.py  tag.py  video.py
api/commands/: __init__.py  model.py  user.py
api/config/: __init__.py  base.py  data.py  log.py
api/data_faker/: animation.py  caption.py  common.py  ip.py  novel.py  video.py
api/models/: __init__.py  animation.py  caption.py  caption_user.py  contributor.py  ip.py  ip_tag.py  novel.py  semi_static.py  staff.py  storage.py  tag.py  user.py  video.py
api/services/: __init__.py  animation.py  caption_user.py  ip.py  ip_tag.py  novel.py  tag.py  user.py  video.py
api/src/: app.py  manage.py
api/src/blueprints/: __init__.py  account.py  animation.py  caption.py  common.py  common_dumper.py  ip.py  novel.py  role.py  search.py  semi_static.py  storage.py  tag.py  user.py  video.py
api/src/commands/: model.py  user.py
api/src/config/: __init__.py  base.py  data.py  log.py
api/src/models/: __init__.py  animation.py  caption.py  caption_user.py  common.py  ip.py  ip_tag.py  novel.py  role.py  search.py  semi_static.py  storage.py  tag.py  user.py  user_role.py  video.py
api/src/services/: __init__.py  animation.py  caption.py  caption_user.py  common.py  ip.py  ip_tag.py  novel.py  role.py  storage.py  tag.py  user.py  video.py  (+1 more)
api/utilities/: string.py
(+101 files in other folders)
